# llm-wiki-kiss

./: .env.example  .gitignore  LICENSE  README.md  progetto_wiki_kiss_ai.md  pyproject.toml  requirements-dev.txt  requirements.txt  rest_api.py
.trae/skills/wiki-kiss-bridge/: SKILL.md
.trae/skills/wiki-kiss-operator/: SKILL.md
mcp_server/: __init__.py  http.py  http_main.py  server.py
scripts/: install-mcp-client.sh  lib.sh  run-tests.sh  setup.sh  start-mcp-http.sh  start-mcp.sh  start-rest.sh  status.sh  stop.sh
tests/: __init__.py  smoke_mcp.py  smoke_mcp_http.py  test_mcp_http.py  test_rest_api.py  test_storage.py
wiki/: index.md
wiki/assets/: README.md
wiki/decisions/: 0001-storage-filesystem.md  index.md
wiki/logs/: 2026-06-17.md  index.md
wiki/notes/: esempio-nota.md  index.md  smoke-test.md  test-da-curl.md
wiki/projects/: index.md  wiki-kiss.md
wiki/references/: index.md
wiki_core/: __init__.py  storage.py
